k8s/10_apps/01_home-assistant/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
    role: server
  name: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
      role: server
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: '[{
          "name": "lan-bridge",
          "namespace": "kube-system",
          "ips": ["192.168.1.231/24"]
        }]'
      labels:
        app: home-assistant
        role: server
    spec:
      serviceAccountName: homeassistant-sa
      containers:
        - name: home-assistant-app
          image: "homeassistant/home-assistant:tag-here"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          resources:
            requests:
              memory: "768Mi"
            limits:
              memory: "1Gi"
          livenessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8123
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: ha-config-data
            - mountPath: /run/dbus
              name: d-bus
              readOnly: true
        - name: code-server
          image: "linuxserver/code-server:tag-here"
          ports:
            - name: code-server
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: ha-config-data
#            - mountPath: /media
#              name: media-volume
#            - mountPath: /dev/ttyUSB1
#              name: zigbee
#            - mountPath: /dev/video0
#              name: cam
      restartPolicy: Always
      volumes:
        - name: ha-config-data
          persistentVolumeClaim:
            claimName: home-assistant-data
        - name: configmap-file
          configMap:
            name: home-assistant-configmap
        - name: d-bus
          hostPath:
            path: /run/dbus
#        - name: media-volume
#          hostPath:
#            path: /tmp/media
#        - name: temp
#          hostPath:
#            path: /tmp/home-assistant
#            type: DirectoryOrCreate
#        - name: d-bus
#          hostPath:
#            path: /run/dbus
#        - name: zigbee
#          hostPath:
#            path: /dev/ttyACM0
#        - name: cam
#          hostPath:
#            path: /dev/video0
