k8s/10_apps/01_home-assistant/base/zigbee2mqtt-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: "koenkk/zigbee2mqtt:tag-here"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: zigbee2mqtt-data-volume
              mountPath: /app/data
      restartPolicy: Always
      volumes:
        - name: zigbee2mqtt-config-volume
          configMap:
            name: zigbee2mqtt-config
        - name: zigbee2mqtt-data-volume
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
