k8s/10_apps/01_home-assistant/base/esphome-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6052
      protocol: TCP
      targetPort: http
  selector:
    app: esphome
