k8s/10_apps/01_home-assistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
    - port: 8443
      targetPort: code-server
      protocol: TCP
      name: code-server
