k8s/10_apps/01_home-assistant/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.200
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.local.naguiar.dev`) || Host(`ha.naguiar.dev`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: home-assistant
          port: http
    - match: Host(`hacode.local.naguiar.dev`) || Host(`hacode.naguiar.dev`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: home-assistant
          port: code-server
    - match: Host(`z2m.local.naguiar.dev`) || Host(`z2m.naguiar.dev`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: zigbee2mqtt
          port: 8080
  tls:
    secretName: certificate-tls
